--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bookline-chatbot-analytics</title>
+    <title>Chat with your Data - Bookline.AI</title>
     <meta name="description" content="Chat with your metrics" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="bookline-chatbot-analytics" />
+    <meta property="og:title" content="Chat with your Data - Bookline.AI" />
     <meta property="og:description" content="Chat with your metrics" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Chat with your Data - Bookline.AI" />
   </head>
 
   <body>
