feat: modify index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat with your Data - Bookline.AI</title>
-    <meta name="description" content="Chat with your metrics" />
-    <meta property="og:title" content="Chat with your Data - Bookline.AI" />
-    <meta property="og:description" content="Chat with your metrics" />
-    <meta name="twitter:title" content="Chat with your Data - Bookline.AI" />
+    <meta name="description" content="Turn data into dialogue. Instantly chat with your datasets using AI-powered tools built for teams, analysts, and decision-makers." />
   </head>
 
   <body>
